--- a/pipelines/frontend-build.yml
+++ b/pipelines/frontend-build.yml
@@ -40,7 +40,7 @@ stages:
             parameters:
                 deploymentName: 'docker_build_push'
                 dependsOn: ''
-                environmentId: '${{ variables.envName }}'
+                environmentId: 'dev'
                 envGroup: '${{ variables.envGroupName }}'
                 dockerfilePath: '${{ variables.dockerfilePath }}'
                 repository: '${{ variables.repositoryName }}'
