--- a/pipelines/frontend-build.yml
+++ b/pipelines/frontend-build.yml
@@ -26,7 +26,7 @@ stages:
     - stage: build
       displayName: 'Docker - Build and Push'
       variables:
-          envName: 'build'
+          envName: 'dev'
           envRg: '${{ variables.envRgName }}'
           serviceConnection: '${{ variables.nonProdServiceConnection }}'
           containerRegistry: '${{ variables.containerRegistryName }}'
@@ -40,7 +40,7 @@ stages:
             parameters:
                 deploymentName: 'docker_build_push'
                 dependsOn: ''
-                environmentId: 'dev'
+                environmentId: '${{ variables.envName }}'
                 envGroup: '${{ variables.envGroupName }}'
                 dockerfilePath: '${{ variables.dockerfilePath }}'
                 repository: '${{ variables.repositoryName }}'
