--- a/pipelines/frontend-build.yml
+++ b/pipelines/frontend-build.yml
@@ -50,7 +50,7 @@ stages:
     - stage: dev
       displayName: 'Deploy to dev'
       dependsOn: 'build'
-      condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/dev'))
+      condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/dev'))
       variables:
           envName: 'dev'
           envLabel: 'non-prod'
