--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "apexcharts": "^3.29.0",
     "comlink": "^4.3.1",
     "dexie": "^3.2.0",
+    "fast-levenshtein": "^3.0.0",
     "install": "^0.13.0",
     "json-fn": "^1.1.1",
     "lodash": "^4.17.21",
