Feature/client move (#69)
* move clinet changes

* Add Config Path

* Revert back to no config

* assded scope

* isProduction apps

* env

* appconfig and menu disabled apps in produnction

* main menu fix import react memo

* removed crypro-js

* added Scope interface and fixed iseApiClient

* fix appApi.appConfig.scope.procosys

* env test

* ref: infra/scope

* process.env.CLIENT_ENV

* vite env

* default env dev

* remove dotenv not uesd

* test

* dev env

* test

* removed mode

* rollback

* env=dev

* env Arg

* log in docker

* scope

* echo

* test

* test

* en name should be build on test

* dev

* dev

* removed default environmentId for test

* Docker update

* condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/dev'))

* updated yarn lock

* renamed @equinor/client to @equinor/portal-client and added .env files

* Some pr changes

* FunctionEnvironment test

* env replace test

* rename path for env replace

* cleanup

* added is produnction function to appConfig

* clint config update on server mount

* Update Build stage

* Update pipelines

* Update gitignore, remove vscode folder

* Add test and prod

* pr cleanup

* readme

* fixing exports

Co-authored-by: terjegjose <tgjos@equinor.com>

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,4 +1,4 @@
-# build environment
+# uild environment
 FROM node:16.10.0 as build
 
 # Copy App
@@ -9,14 +9,13 @@ COPY . /app
 RUN yarn install
 RUN yarn build 
 
-# production environment
+# Production environment
 FROM nginx:stable-alpine
 
 ## Install
-# RUN apk add python3
+RUN apk add python3
 
-
-## add permissions for nginx user
+## Add permissions for nginx user
 COPY --from=build /app/dist /usr/share/nginx/html
 
 ## Cooy Nginx
@@ -24,6 +23,9 @@ COPY .docker/nginx/ /etc/nginx/
 
 ## Copy Scripts
 COPY  .docker/scripts/ /etc/scripts/
+
+## Copy Env
+COPY .env /etc/scripts/
 
 ## Server setup
 EXPOSE 80
