--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
+    "create-config": "python ./.docker/scripts/create-client-config.py",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
     "lint-fix": "eslint --ext .js,.jsx,.ts,.tsx src --color --fix",
     "lint-strict": "eslint --ext .js,.jsx,.ts,.tsx src --color --max-warnings=0",
@@ -17,7 +18,7 @@
     "format": "prettier --config ./.prettierrc --write ./src/**",
     "test-watch": "yarn  ci & jest --watchAll",
     "test-coverage": "yarn ci & jest --coverage",
-    "docker-build": "docker build -f ./.docker/Dockerfile -t lighthouse:dev ."
+    "docker-build": "docker-compose up"
   },
   "dependencies": {
     "@azure/app-configuration": "^1.3.1",
