--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,14 +33,11 @@
             "@equinor/Diagrams": ["./src/packages/Diagrams"],
             "@equinor/ThreeDViewer": ["./src/packages/ThreeDViewer"],
             "@equinor/Table": ["./src/packages/Table"],
-            "@equinor/authentication": ["./packages/authentication"],
+            "@equinor/authentication": ["./src/packages/authentication"],
             "@equinor/http-client": ["./src/Core/httpClient"],
-            "@equinor/lighthouse-core": ["./packages/core"],
-            "@equinor/lighthouse-hooks": ["./packages/hooks"],
-            "@equinor/lighthouse-components": ["./packages/components"],
-            "@equinor/lighthouse-conf": ["./packages/configuration"],
-            "@equinor/lighthouse-util": ["./packages/util"],
-            "@equinor/lighthouse-typeGuard": ["./packages/typeGuard"]
+            "@equinor/hooks": ["./src/hooks"],
+            "@equinor/util": ["./src/packages/Utils"],
+            "@equinor/typeGuard": ["./src/packages/typeGuard"]
         }
     },
     "compileOnSave": true,
