--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@equinor/eds-core-react": "^0.14.2",
     "@equinor/eds-icons": "^0.10.0",
     "@equinor/eds-tokens": "^0.7.0",
+    "@microsoft/applicationinsights-react-js": "^3.2.2",
+    "@microsoft/applicationinsights-web": "^2.7.2",
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "apexcharts": "^3.29.0",
     "chart.js": "^3.7.0",
