Revert "chore: update tsdoc for hook"
This reverts commit a4122bb051794c1a99591355cec28c4253d8752a.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
         "prettier/prettier": [
             "warn",
             {
-                "endOfLine": "lf"
+                "endOfLine": "crlf"
             }
         ],
         "@typescript-eslint/explicit-function-return-type": "off",
