--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@equinor/eds-core-react": "^0.14.2",
     "@equinor/eds-icons": "^0.10.0",
     "@equinor/eds-tokens": "^0.7.0",
+    "@equinor/fusion-framework-module": "^0.1.1",
     "@microsoft/applicationinsights-react-js": "^3.2.2",
     "@microsoft/applicationinsights-web": "^2.7.3",
     "@microsoft/microsoft-graph-types": "^2.7.0",
