added tenantId and clientId to client config and env file

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 CLIENT_ENV=dev
 ENV_CONFIG_URI=func-ppo-web-client-dev
+CLIENT_ID=3becc69f-510a-411b-92a4-c0bf8d5ca588
+TENANT_ID=3aa4a235-b6e2-48d5-9195-7fcf05b459b0
