--- a/public/client-config.json
+++ b/public/client-config.json
@@ -1,4 +1,6 @@
 {
     "CLIENT_ENV": "dev",
-    "ENV_CONFIG_URI": "func-ppo-web-client-dev"
+    "ENV_CONFIG_URI": "func-ppo-web-client-dev",
+    "clientId": "3becc69f-510a-411b-92a4-c0bf8d5ca588",
+    "tenantId": "3aa4a235-b6e2-48d5-9195-7fcf05b459b0"
 }
