--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "d3-scale-chromatic": "^3.0.0",
     "dexie": "^3.2.0",
     "fast-levenshtein": "^3.0.0",
+    "fuse.js": "^3.4.3",
     "install": "^0.13.0",
     "json-fn": "^1.1.1",
     "lodash": "^4.17.21",
