--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-window": "^1.8.6",
     "sortablejs": "^1.14.0",
     "styled-components": "^5.3.3",
+    "tinycolor2": "^1.4.2",
     "ts-node": "^10.2.1",
     "typesafe-actions": "^5.1.0",
     "worker-loader": "^3.0.8",
