--- a/package.json
+++ b/package.json
@@ -22,17 +22,19 @@
   },
   "dependencies": {
     "@azure/msal-browser": "^2.18.0",
-    "@cognite/reveal": "^2.2.2",
-    "@cognite/sdk": "5.6.1",
+    "@cognite/reveal": "^2.3.0",
+    "@cognite/sdk": "5.6.2",
     "@dbeining/react-atom": "^4.1.21",
     "@equinor/eds-core-react": "^0.14.2",
     "@equinor/eds-icons": "^0.10.0",
     "@equinor/eds-tokens": "^0.7.0",
     "@equinor/fusion-framework-module": "^0.1.1",
+    "@esfx/async-canceltoken": "^1.0.0-pre.30",
     "@microsoft/applicationinsights-react-js": "^3.2.2",
     "@microsoft/applicationinsights-web": "^2.7.3",
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "apexcharts": "^3.29.0",
+    "camera-controls": "^1.34.1",
     "chart.js": "^3.7.0",
     "chartjs-plugin-zoom": "^1.2.0",
     "comlink": "^4.3.1",
@@ -40,6 +42,7 @@
     "dexie": "^3.2.0",
     "fast-levenshtein": "^3.0.0",
     "fuse.js": "^6.5.3",
+    "hold-event": "^0.1.0",
     "install": "^0.13.0",
     "json-fn": "^1.1.1",
     "lodash": "^4.17.21",
