--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,7 @@
             "@equinor/hooks": ["./src/hooks"],
             "@equinor/Utils": ["./src/packages/Utils"],
             "@equinor/typeGuard": ["./src/packages/typeGuard"],
-            "@equinor/echo3dweb-viewer": ["./packages/echo3dViewer"]
+            "@equinor/echo3dweb-viewer": ["./packages/echo3dViewer/src"]
         }
     },
     "compileOnSave": true,
