--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@microsoft/applicationinsights-react-js": "^3.2.2",
     "@microsoft/applicationinsights-web": "^2.7.3",
     "@microsoft/microsoft-graph-types": "^2.7.0",
+    "@microsoft/signalr": "^6.0.2",
     "apexcharts": "^3.29.0",
     "chart.js": "^3.7.0",
     "chartjs-plugin-zoom": "^1.2.0",
+    "classnames": "^2.3.1",
     "comlink": "^4.3.1",
     "d3-scale-chromatic": "^3.0.0",
     "dexie": "^3.2.0",
@@ -44,6 +46,7 @@
     "json-fn": "^1.1.1",
     "lodash": "^4.17.21",
     "luxon": "^2.1.1",
+    "marked": "^4.0.12",
     "moment": "^2.29.1",
     "powerbi-client": "^2.19.1",
     "powerbi-client-react": "^1.3.3",
@@ -51,6 +54,7 @@
     "prop-types": "^15.7.2",
     "re-resizable": "^6.9.1",
     "react": "^17.0.2",
+    "react-adaptivecards": "^0.1.3",
     "react-apexcharts": "^1.3.9",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
