--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
+    "react-hook-form": "^7.27.1",
     "react-query": "^3.34.4",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.0.2",
