--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,28 +2,28 @@ GithubActions:
     - .github/**
 
 Apps:
-    - ./src/apps/**
+    - /src/apps/**
 
 Core:
-    - ./src/Core/**
+    - /src/Core/**
 
 Packages:
-    - ./src/packages/**
+    - /src/packages/**
 
 WorkSpace:
-    - ./src/Core/WorkSpace/**
+    - /src/Core/WorkSpace/**
 
 PageViewer:
-    - ./src/Core/PageViewer/**
+    - /src/Core/PageViewer/**
 
 Client:
-    - ./src/Core/Client/**
+    - /src/Core/Client/**
 
 Configuration:
-    - ./*
+    - /*
 
 Pipelines:
-    - ./pipelines/*
+    - /pipelines/*
 
 Dependencies:
     - package.json
