--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -7,6 +7,13 @@ Apps:
 Core:
     - /src/Core/**
 
+Components:
+    - /src/components/**
+
+Portal:
+    - /src/components/Menu**
+    - /src/components/TopBar**
+
 Packages:
     - /src/packages/**
 
