removed slash in lable yml

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,35 +2,35 @@ GithubActions:
     - .github/**
 
 Apps:
-    - /src/apps/**
+    - src/apps/**
 
 Core:
-    - /src/Core/**
+    - src/Core/**
 
 Components:
-    - /src/components/**
+    - src/components/**
 
 Portal:
-    - /src/components/Menu**
-    - /src/components/TopBar**
+    - src/components/Menu**
+    - src/components/TopBar**
 
 Packages:
-    - /src/packages/**
+    - src/packages/**
 
 WorkSpace:
-    - /src/Core/WorkSpace/**
+    - src/Core/WorkSpace/**
 
 PageViewer:
-    - /src/Core/PageViewer/**
+    - src/Core/PageViewer/**
 
 Client:
-    - /src/Core/Client/**
+    - src/Core/Client/**
 
 Configuration:
     - /*
 
 Pipelines:
-    - /pipelines/*
+    - pipelines/*
 
 Dependencies:
     - package.json
