--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -16,10 +16,16 @@ WorkSpace:
 PageViewer:
     - src/Core/PageViewer/**
 
+Client:
+    - src/Core/Client/**
+
 Portal:
     - src/Core/Client/**
     - src/components/Menu/**
     - src/components/TopBar/**
+
+Components:
+    - src/components/**
 
 Configuration:
     - /*
