Menu/expanded-menu-ui-updates (#281)
* expanded menu visual update and som cleanup in main menu

* moved add items to topp bar

* labler fix

* added portal label

* removed slash in lable yml

* removed compenents lable

* lable fix

* fix

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,28 +2,36 @@ GithubActions:
     - .github/**
 
 Apps:
-    - ./src/apps/**
+    - src/apps/**
 
 Core:
-    - ./src/Core/**
+    - src/Core/**
 
 Packages:
-    - ./src/packages/**
+    - src/packages/**
 
 WorkSpace:
-    - ./src/Core/WorkSpace/**
+    - src/Core/WorkSpace/**
 
 PageViewer:
-    - ./src/Core/PageViewer/**
+    - src/Core/PageViewer/**
 
 Client:
-    - ./src/Core/Client/**
+    - src/Core/Client/**
+
+Portal:
+    - src/Core/Client/**
+    - src/components/Menu/**
+    - src/components/TopBar/**
+
+Components:
+    - src/components/**
 
 Configuration:
-    - ./*
+    - /*
 
 Pipelines:
-    - ./pipelines/*
+    - pipelines/*
 
 Dependencies:
     - package.json
