Update Nginx server name

--- a/.docker/nginx/conf.d/default.conf
+++ b/.docker/nginx/conf.d/default.conf
@@ -1,9 +1,9 @@
 server {
     listen              80;
     listen              [::]:80;
-    server_name         localhost;
+    server_name         jc.fusion.equinor.com, jc.fusion.dev.equinor.com, jc.fusion.test.equinor.com;
     absolute_redirect   off;
-    
+
     root /usr/share/nginx/html;
 
     # index.html fallback
