Add parameters to prod stage

--- a/pipelines/frontend-build.yml
+++ b/pipelines/frontend-build.yml
@@ -151,6 +151,10 @@ stages:
           clientEnv: '${{ variables.envName }}'
           configURI: '${{ variables.configURI }}'
           rgName: '${{variables.rgName}}'
+          kvSharedName: '${{ variables.kvSharedName }}'
+          kvName: '${{ variables.kvName }}'
+          envLabel: '${{ variables.envLabel }}'
+          envName: '${{ variables.envName }}'
           envGroup: '${{ variables.envGroupName }}'
           repository: '${{ variables.repositoryName }}'
           containerRegistry: '${{ variables.containerRegistry }}'
